Fix for printing with accelerated <canvas> https://bugs.webkit.org/show_bug.cgi?id=62406

Reviewed by James Robinson.

The platform-independent side of this should be covered by existing
tests.  Printing itself in Chrome has few tests, sadly.  :(

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::paint):
* platform/graphics/skia/ImageBufferSkia.cpp:
(WebCore::ImageBuffer::draw):


Canonical link: https://commits.webkit.org/81034@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91870 268f45cc-cd09-0410-ab3c-d52691b4dbfc